# crypto-crawler-rs

./: BINANCE_CRYPTO_MARKETS_API.md  BINANCE_REST_API_COMPLETE.md  BINANCE_WEBSOCKET_API.md  WEBSOCKET_CONNECTION_ISSUES.md  WEBSOCKET_ERROR_ANALYSIS.md  WEBSOCKET_FIXES_APPLIED.md
crypto-client/: Cargo.toml  README.md
crypto-client/src/: config.rs  exchange_type.rs  lib.rs  rest_client.rs  traits.rs  ws_client.rs
crypto-crawler/src/crawlers/: utils.rs
crypto-rest-client/: Cargo.toml
crypto-rest-client/src/: error.rs  lib.rs
crypto-rest-client/src/exchanges/: mod.rs  utils.rs
crypto-rest-client/src/exchanges/binance/: binance_inverse.rs  binance_linear.rs  binance_option.rs  binance_spot.rs  mod.rs  utils.rs
crypto-rest-client/src/exchanges/bingx/: bingx_spot.rs  bingx_swap.rs  mod.rs
crypto-rest-client/src/exchanges/bitget/: bitget_spot.rs  bitget_swap.rs
crypto-rest-client/src/exchanges/bybit/: bybit_linear.rs  mod.rs
crypto-rest-client/src/exchanges/mexc/: mexc_spot.rs  mexc_swap.rs  mod.rs
crypto-ws-client/: Cargo.toml  README.md  build.rs
crypto-ws-client/examples/: welcome.rs
crypto-ws-client/proto/: mexc.proto
crypto-ws-client/src/: lib.rs
crypto-ws-client/src/clients/: binance.rs  common_traits.rs  mod.rs
crypto-ws-client/src/clients/bingx/: bingx_spot.rs  bingx_swap.rs  mod.rs
crypto-ws-client/src/clients/bitget/: bitget_spot.rs  bitget_swap.rs  utils.rs
crypto-ws-client/src/clients/bybit/: bybit_inverse.rs  bybit_linear_swap.rs  bybit_spot.rs  mod.rs  utils.rs
crypto-ws-client/src/clients/mexc/: mod.rs  (+2 more)
crypto-ws-client/src/common/: connect_async.rs  ws_client.rs  ws_client_internal.rs
crypto-ws-client/tests/: mexc.rs  mexc_binary_handling.rs
