[package]
name = "crypto-client"
version = "0.1.0"
authors = ["kobe"]
edition = "2024"
description   = "An unified restful client for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/EvgeniiKobelev/crypto-crawler-rs/tree/main/crypto-client"
homepage = "https://github.com/EvgeniiKobelev/crypto-crawler-rs/tree/main/crypto-client"

[dependencies]
crypto-rest-client = { path = "../crypto-rest-client" }
crypto-ws-client = { path = "../crypto-ws-client" }
crypto-market-type = { path = "../crypto-market-type" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
