[package]
name = "crypto-rest-client"
version = "1.0.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "An RESTful client for all cryptocurrency exchanges."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-rest-client"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
crypto-market-type = "1.1.5"
once_cell = "1.17.1"
log = "0.4.17"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "gzip", "socks", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.13"

[dev_dependencies]
test-case = "1"
tokio = { version = "1", features = ["full"] }
